# Sukito

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: index.html  latest.json  privacy.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: DayColumn.tsx  Dialog.tsx  Header.tsx  NotificationToast.tsx  TaskItem.tsx  ToastList.tsx  WeatherAtmosphere.tsx
src/components/modals/: SettingsModal.tsx  TaskModal.tsx
src/constants/: index.ts
src/hooks/: useAlarm.ts  useAppSetup.ts  useGoogleAuth.ts  useGoogleSync.ts  useSettings.ts  useTaskModal.ts  useTasks.ts  useToast.ts  useWeather.ts  useWeekView.ts
src/services/: alarmService.ts  settingsService.ts
src/types/: index.ts
src/utils/: alarm.ts  datetime.ts  error-handling.ts  google-auth.ts  language.ts  timeProgress.ts  timezone.ts
