[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-notification = "2.0.0" # 알림 플러그인 추가
winreg = "0.52"
urlencoding = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
